lufa_inc = [
    'Common',
    'Drivers/USB',
    'Drivers/USB/Class',
    'Drivers/USB/Class/Common',
    'Drivers/USB/Class/Device',
    'Drivers/USB/Class/Host',
    'Drivers/USB/Core',
    'Drivers/USB/Core/XMEGA',
    'Platform',
    'Platform/UC3',
    'Platform/XMEGA',
]

lufa_src = files(
    'Platform/UC3/InterruptManagement.c',
    'Drivers/USB/Core/XMEGA/Template/Template_Endpoint_RW.c',
    'Drivers/USB/Core/XMEGA/Template/Template_Endpoint_Control_W.c',
    'Drivers/USB/Core/XMEGA/Template/Template_Endpoint_Control_R.c',
    'Drivers/USB/Core/XMEGA/USBInterrupt_XMEGA.c',
    'Drivers/USB/Core/XMEGA/USBController_XMEGA.c',
    'Drivers/USB/Core/XMEGA/PipeStream_XMEGA.c',
    'Drivers/USB/Core/XMEGA/Pipe_XMEGA.c',
    'Drivers/USB/Core/XMEGA/Host_XMEGA.c',
    'Drivers/USB/Core/XMEGA/EndpointStream_XMEGA.c',
    'Drivers/USB/Core/XMEGA/Endpoint_XMEGA.c',
    'Drivers/USB/Core/XMEGA/Device_XMEGA.c',
    'Drivers/USB/Core/UC3/Template/Template_Pipe_RW.c',
    'Drivers/USB/Core/UC3/Template/Template_Endpoint_RW.c',
    'Drivers/USB/Core/UC3/Template/Template_Endpoint_Control_W.c',
    'Drivers/USB/Core/UC3/Template/Template_Endpoint_Control_R.c',
    'Drivers/USB/Core/UC3/USBInterrupt_UC3.c',
    'Drivers/USB/Core/UC3/USBController_UC3.c',
    'Drivers/USB/Core/UC3/PipeStream_UC3.c',
    'Drivers/USB/Core/UC3/Pipe_UC3.c',
    'Drivers/USB/Core/UC3/Host_UC3.c',
    'Drivers/USB/Core/UC3/EndpointStream_UC3.c',
    'Drivers/USB/Core/UC3/Endpoint_UC3.c',
    'Drivers/USB/Core/UC3/Device_UC3.c',
    'Drivers/USB/Core/AVR8/Template/Template_Pipe_RW.c',
    'Drivers/USB/Core/AVR8/Template/Template_Endpoint_RW.c',
    'Drivers/USB/Core/AVR8/Template/Template_Endpoint_Control_W.c',
    'Drivers/USB/Core/AVR8/Template/Template_Endpoint_Control_R.c',
    'Drivers/USB/Core/AVR8/USBInterrupt_AVR8.c',
    'Drivers/USB/Core/AVR8/USBController_AVR8.c',
    'Drivers/USB/Core/AVR8/PipeStream_AVR8.c',
    'Drivers/USB/Core/AVR8/Pipe_AVR8.c',
    'Drivers/USB/Core/AVR8/Host_AVR8.c',
    'Drivers/USB/Core/AVR8/EndpointStream_AVR8.c',
    'Drivers/USB/Core/AVR8/Endpoint_AVR8.c',
    'Drivers/USB/Core/AVR8/Device_AVR8.c',
    'Drivers/USB/Core/USBTask.c',
    'Drivers/USB/Core/HostStandardReq.c',
    'Drivers/USB/Core/Events.c',
    'Drivers/USB/Core/DeviceStandardReq.c',
    'Drivers/USB/Core/ConfigDescriptors.c',
    'Drivers/USB/Class/Host/StillImageClassHost.c',
    'Drivers/USB/Class/Host/RNDISClassHost.c',
    'Drivers/USB/Class/Host/PrinterClassHost.c',
    'Drivers/USB/Class/Host/MIDIClassHost.c',
    'Drivers/USB/Class/Host/MassStorageClassHost.c',
    'Drivers/USB/Class/Host/HIDClassHost.c',
    'Drivers/USB/Class/Host/CDCClassHost.c',
    'Drivers/USB/Class/Host/AudioClassHost.c',
    'Drivers/USB/Class/Host/AndroidAccessoryClassHost.c',
    'Drivers/USB/Class/Device/RNDISClassDevice.c',
    'Drivers/USB/Class/Device/PrinterClassDevice.c',
    'Drivers/USB/Class/Device/MIDIClassDevice.c',
    'Drivers/USB/Class/Device/MassStorageClassDevice.c',
    'Drivers/USB/Class/Device/HIDClassDevice.c',
    'Drivers/USB/Class/Device/CDCClassDevice.c',
    'Drivers/USB/Class/Device/CCIDClassDevice.c',
    'Drivers/USB/Class/Device/AudioClassDevice.c',
    'Drivers/USB/Class/Common/HIDParser.c'
)

lufa = declare_dependency(include_directories : lufa_inc, sources : lufa_src)