root = meson.global_source_root()

platform_src = files(
    root / 'src/hal/avr/xmega/128a4u/boot.c',
    root / 'src/hal/avr/xmega/128a4u/dma.c',
    root / 'src/hal/avr/xmega/128a4u/gpio.c',
    root / 'src/hal/avr/xmega/128a4u/init.c',
    root / 'src/hal/avr/xmega/128a4u/timer.c',
    root / 'src/hal/avr/xmega/128a4u/usart.c',
    root / 'src/midi/backend/midi_lufa.c',
    root / 'src/usb/lufa/usb_lufa.c',

    'display.c',
    'hw_encoder.c',
    'hw_led.c',
    'hw_switch.c',
    'input_manager.c',
    'main.c',
    'menu.c',
    'systime.c',
)
