project('tinyusb', 'c')

tinyusb_sources = files(
    'src/portable/espressif/esp32sx/dcd_esp32sx.c',
    'src/portable/sony/cxd56/dcd_cxd56.c',
    'src/portable/ti/msp430x5xx/dcd_msp430x5xx.c',
    'src/portable/sunxi/dcd_sunxi_musb.c',
    'src/portable/microchip/samx7x/dcd_samx7x.c',
    'src/portable/microchip/pic/dcd_pic.c',
    'src/portable/microchip/samd/dcd_samd.c',
    'src/portable/microchip/pic32mz/dcd_pic32mz.c',
    'src/portable/microchip/samg/dcd_samg.c',
    'src/portable/mentor/musb/hcd_musb.c',
    'src/portable/mentor/musb/dcd_musb.c',
    'src/portable/bridgetek/ft9xx/dcd_ft9xx.c',
    'src/portable/chipidea/ci_fs/dcd_ci_fs.c',
    'src/portable/chipidea/ci_hs/hcd_ci_hs.c',
    'src/portable/chipidea/ci_hs/dcd_ci_hs.c',
    'src/portable/raspberrypi/pio_usb/dcd_pio_usb.c',
    'src/portable/raspberrypi/pio_usb/hcd_pio_usb.c',
    'src/portable/raspberrypi/rp2040/dcd_rp2040.c',
    'src/portable/raspberrypi/rp2040/hcd_rp2040.c',
    'src/portable/raspberrypi/rp2040/rp2040_usb.c',
    'src/portable/nuvoton/nuc120/dcd_nuc120.c',
    'src/portable/nuvoton/nuc121/dcd_nuc121.c',
    'src/portable/nuvoton/nuc505/dcd_nuc505.c',
    'src/portable/wch/ch32v307/dcd_usbhs.c',
    'src/portable/synopsys/dwc2/dcd_dwc2.c',
    'src/portable/mindmotion/mm32/dcd_mm32f327x_otg.c',
    'src/portable/nordic/nrf5x/dcd_nrf5x.c',
    'src/portable/renesas/rusb2/rusb2_common.c',
    'src/portable/renesas/rusb2/dcd_rusb2.c',
    'src/portable/renesas/rusb2/hcd_rusb2.c',
    'src/portable/analog/max3421/hcd_max3421.c',
    'src/portable/ehci/ehci.c',
    'src/portable/st/stm32_fsdev/dcd_stm32_fsdev.c',
    'src/portable/st/synopsys/dcd_synopsys.c',
    'src/portable/st/typec/typec_stm32.c',
    'src/portable/nxp/lpc17_40/dcd_lpc17_40.c',
    'src/portable/nxp/lpc17_40/hcd_lpc17_40.c',
    'src/portable/nxp/lpc_ip3511/dcd_lpc_ip3511.c',
    'src/portable/nxp/khci/dcd_khci.c',
    'src/portable/nxp/khci/hcd_khci.c',
    'src/portable/template/hcd_template.c',
    'src/portable/template/dcd_template.c',
    'src/portable/valentyusb/eptri/dcd_eptri.c',
    'src/portable/dialog/da146xx/dcd_da146xx.c',
    'src/portable/ohci/ohci.c',
    'src/class/video/video_device.c',
    'src/class/msc/msc_device.c',
    'src/class/msc/msc_host.c',
    'src/class/audio/audio_device.c',
    'src/class/bth/bth_device.c',
    'src/class/usbtmc/usbtmc_device.c',
    'src/class/dfu/dfu_rt_device.c',
    'src/class/dfu/dfu_device.c',
    'src/class/vendor/vendor_host.c',
    'src/class/vendor/vendor_device.c',
    'src/class/cdc/cdc_rndis_host.c',
    'src/class/cdc/cdc_device.c',
    'src/class/cdc/cdc_host.c',
    'src/class/midi/midi_device.c',
    'src/class/net/ncm_device.c',
    'src/class/net/ecm_rndis_device.c',
    'src/class/hid/hid_host.c',
    'src/class/hid/hid_device.c',
    'src/host/hub.c',
    'src/host/usbh.c',
    'src/device/usbd.c',
    'src/device/usbd_control.c',
    'src/common/tusb_fifo.c',
    'src/tusb.c',
    'src/typec/usbc.c',
)

compiler_args=[
]

tinyusb_inc = include_directories('src')

add_project_arguments(compiler_args , language : 'c')

tinyusb_lib = library('tinyusb', tinyusb_sources, include_directories: tinyusb_inc)
tinyusb_dep = declare_dependency(link_with : tinyusb_lib, include_directories : tinyusb_inc)